estilos al ejemplo 17
mas estilos

--- a/WBSItem/17.html
+++ b/WBSItem/17.html
@@ -202,7 +202,11 @@ Components.create('Window',{
 				id:'progressload',
 				state:'active',
 				scale:'minier',
-				animate:false,					
+				animate:false,
+				css:{
+				    'margin-top': '2px',
+					'margin-left': '2px'
+				}
             },
 		 ]
     },
