--- a/WBSItem/5W.html
+++ b/WBSItem/5W.html
@@ -337,7 +337,7 @@ Components.create('Window', {
 	}
   ]
 }).hide();
-                        
+Components.getComponentById('Okno').drawTree();                        
 	
 });  
 </script>	
