--- a/WBSItem/6W.html
+++ b/WBSItem/6W.html
@@ -282,7 +282,7 @@ Components.create('Window',{
 	}
   ]	
 }).show();
- 
+ Components.getComponentById('Okno').drawTree();  
 });  
 </script>	
 </head>
