--- a/WBSItem/8W.html
+++ b/WBSItem/8W.html
@@ -298,6 +298,7 @@ Components.create('Window',{
 	}
    ]	
 }).show();
+Components.getComponentById('Okno').drawTree();  
 });  
 </script>	
 </head>
