--- a/WBSItem/9W.html
+++ b/WBSItem/9W.html
@@ -420,7 +420,7 @@ Components.create('Window',{
 		}
 	 ]	
 }).show();
-
+Components.getComponentById('Tree1').drawTree(); 
 //definiremos una ventana donde se realizara la edicion de nodos
 Components.create('Window', {
 	title: 'Edicion de nodos',
