--- a/WBSItem/Import_Export.html
+++ b/WBSItem/Import_Export.html
@@ -175,7 +175,7 @@ items:[
 	}
   ]      
 }).show();
-
+Components.getComponentById('Okno').drawTree(); 
 Components.create('Window',{
 	id:'GridInfoWindow',
 	x:800,
