--- a/WBSItem/19.html
+++ b/WBSItem/19.html
@@ -995,6 +995,7 @@ Components.create('Window',{
 		}
 	]	
 }).show();
+Components.getComponentById('Okno').drawTree(); 
 Components.create('Window',{
 	id:'GridInfoWindow',
 	x:5,
