--- a/WBSItem/7W.html
+++ b/WBSItem/7W.html
@@ -271,7 +271,7 @@ Components.create('Window',{
 	}
   ]	
 }).show();
-
+Components.getComponentById('Okno').drawTree();  
 });  
 </script>	
 </head>
