--- a/WBSItem/ClipBoard.html
+++ b/WBSItem/ClipBoard.html
@@ -411,7 +411,7 @@ Components.create('Window',{
 	}
    ]	
 }).show();
-//}
+Components.getComponentById('Okno').drawTree();  
 });  
 </script>	
 </head>
