--- a/WBSItem/coloresEdicion.html
+++ b/WBSItem/coloresEdicion.html
@@ -223,7 +223,7 @@ Components.create('Window',{
 		}
 	 ]	
 }).show();
-
+Components.getComponentById('Tree1').drawTree();	
 //definiremos una ventana donde se realizara la edicion
 Components.create('Window', {
 	title: 'Edicion de nodos',
@@ -337,7 +337,7 @@ Components.create('Window', {
   ]
 }).hide();
                         
-	
+
 });  
 </script>	
 </head>
