--- a/ProgressBarItem/3.html
+++ b/ProgressBarItem/3.html
@@ -51,11 +51,9 @@
 				value:50,
 				state:'active',
 				class:'striped',
+				input:true,
 				animate:true,
-                css:
-				{
-				'padding-top':'10px'
-				}						
+                						
             },
 			{
 				type: 'ProgressBar',
@@ -63,6 +61,7 @@
 				width: 250,
 				value:75,
 				state:'error',
+				input:true,
 				class:'striped',
 				animate:true,		
             },
