--- a/TextFieldItem/1.html
+++ b/TextFieldItem/1.html
@@ -70,6 +70,21 @@ Components.create('Form',{
 	state:'active',
 	},
   },
+  {type: 'InputField',
+	enabled:false,
+	input:{cols:12,
+		id: 'des',
+		width: '90%',
+		placeholder:'desabilitado',
+		icon:{
+		type:'fontawesome',
+		class:'fa-envelope',
+		position:'left'
+	},
+	state:'active',
+	
+	},
+  },
 ]
 }).show();
 
