--- a/polar/1backup.html
+++ b/polar/1backup.html
@@ -45,7 +45,7 @@
 <script src="../components/tab/tabItemView.js"></script>
 <script src="../components/items/LayoutWilliam.js"></script>
 <script src="../components/items/ECOTree.js"></script>
-<script src="../components/svg/polar/polarSvg.js"></script>
+<!--<script src="../components/svg/polar/polarSvg.js"></script> -->
 
 <link rel="stylesheet" href="../css_components/css_window.css" />
 <link rel="stylesheet" href="../css_components/css_gridpanel.css" />
@@ -89,9 +89,9 @@ $( document ).ready(function(){
 	contenedor.svg();
     contenedor.append('<div id="EscalaFactorDesempeno"style="margin-top: -39px;"></div>');
     var svg = contenedor.svg('get');
-    var CalificaObj = new CalificaSVG(data,svg);		   
+    /*var CalificaObj = new CalificaSVG(data,svg);		   
     CalificaObj.draw();    
-    CalificaObj.savePolygonsData();
+    CalificaObj.savePolygonsData();*/
 
 });  
 </script>	
