GridContainer Soporte de Columna con Fecha
Se agrego soporte para columna con fecha formateada, y se altero el PHP
para responder a ese formato

--- a/GridContainer/6.html
+++ b/GridContainer/6.html
@@ -121,7 +121,7 @@ columns: [
 	text: "Fecha",
 	dataIndex: "Fecha",
 	dataConfig:{type:'date',
-				 format: "yy/MM/dd",
+				 format: "mm/dd/yy",
 				},
 	width:"20%",
 	editor: {
