InputField que escrive sobre contenido HTML
Cambios realizados para adaptarse a Eclesianet

--- a/OnOff/scales.html
+++ b/OnOff/scales.html
@@ -89,7 +89,7 @@ Components.create('Form',{
 			},
 			input:{cols:8,
 					type:'onoffswitch',
-					checked:true,
+					checked:false,
 					state:'highlight',
 					scale:'mini',
 			},
@@ -117,7 +117,7 @@ Components.create('Form',{
 			},
 			input:{cols:8,
 					type:'onoffswitch',
-					checked:true,
+					checked:false,
 					state:'warning',
 					scale:'medium',
 			},
