--- a/autocomplete/2.html
+++ b/autocomplete/2.html
@@ -55,8 +55,9 @@
                     },
                     sourcefunction: function(request, response) {
                         $.ajax({
+							type:'post',
                             url: 'php/dataphp.php',
-                            data: 'dataset=sampledata2',
+                            data: {dataset:'sampledata2',term: request.term},
                             dataType: "json",
                             success: function(dato) {
                                 response(dato);
